<!--
  ~ This is free software; you can redistribute it and/or modify it
  ~ under the terms of the GNU Lesser General Public License as
  ~ published by the Free Software Foundation; either version 2.1 of
  ~ the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this software; if not, write to the Free
  ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
        http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.wildfly.jastow.jspc</groupId>
    <artifactId>jspc</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>jspc</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.junit>4.12</version.junit>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.undertow.jastow</groupId>
            <artifactId>jastow</artifactId>
            <version>${version.io.undertow.jastow.jastow}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.metadata</groupId>
            <artifactId>jboss-metadata-web</artifactId>
            <version>${version.org.jboss.metadata.jboss-metadata-web}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec.javax.servlet.jsp</groupId>
            <artifactId>jboss-jsp-api_2.3_spec</artifactId>
            <version>${version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.logmanager</groupId>
            <artifactId>log4j-jboss-logmanager</artifactId>
            <version>${version.org.jboss.logmanager.log4j-jboss-logmanager}</version>
        </dependency>

        <!-- dependencies for standard TLDs -JSP and JSF- -->
        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-spec</artifactId>
            <version>${version.org.apache.taglibs.taglibs-standard-spec}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-impl</artifactId>
            <version>${version.org.apache.taglibs.taglibs-standard-spec}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec.javax.faces</groupId>
            <artifactId>jboss-jsf-api_2.3_spec</artifactId>
            <version>${version.org.jboss.spec.javax.faces.jboss-jsf-api}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.sun.faces</groupId>
            <artifactId>jsf-impl</artifactId>
            <version>${version.com.sun.faces.jsf-impl}</version>
            <optional>true</optional>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>wildfly18</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <version.io.undertow.jastow.jastow>2.0.7.Final</version.io.undertow.jastow.jastow>
                <version.org.jboss.metadata.jboss-metadata-web>13.0.0.Final</version.org.jboss.metadata.jboss-metadata-web>
                <version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api>2.0.0.Final</version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api>
                <version.org.jboss.logmanager.log4j-jboss-logmanager>1.2.0.Final</version.org.jboss.logmanager.log4j-jboss-logmanager>
                <version.org.apache.taglibs.taglibs-standard-spec>1.2.6-RC1</version.org.apache.taglibs.taglibs-standard-spec>
                <version.org.jboss.spec.javax.faces.jboss-jsf-api>3.0.0.Final</version.org.jboss.spec.javax.faces.jboss-jsf-api>
                <version.com.sun.faces.jsf-impl>2.3.9.SP03</version.com.sun.faces.jsf-impl>
            </properties>
        </profile>
        <profile>
            <id>eap72</id>
            <properties>
                <version.io.undertow.jastow.jastow>2.0.7.Final-redhat-00001</version.io.undertow.jastow.jastow>
                <version.org.jboss.metadata.jboss-metadata-web>12.0.0.Final-redhat-00001</version.org.jboss.metadata.jboss-metadata-web>
                <version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api>1.0.3.Final-redhat-1</version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api>
                <version.org.jboss.logmanager.log4j-jboss-logmanager>1.1.6.Final-redhat-00001</version.org.jboss.logmanager.log4j-jboss-logmanager>
                <version.org.apache.taglibs.taglibs-standard-spec>1.2.6.RC1-redhat-1</version.org.apache.taglibs.taglibs-standard-spec>
                <version.org.jboss.spec.javax.faces.jboss-jsf-api>2.3.5.SP1-redhat-1</version.org.jboss.spec.javax.faces.jboss-jsf-api>
                <version.com.sun.faces.jsf-impl>2.3.5.SP3-redhat-00001</version.com.sun.faces.jsf-impl>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <goals>
                          <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>org.wildfly.jastow.jspc.JspC</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>jboss</id>
            <url>https://repository.jboss.org/nexus/content/repositories/public/</url>
        </repository>
        <repository>
            <id>redhat</id>
            <url>https://maven.repository.redhat.com/ga/</url>
        </repository>
    </repositories>
</project>
